--- a/src/app/farmer-application/farmer-application.component.html
+++ b/src/app/farmer-application/farmer-application.component.html
@@ -61,7 +61,7 @@
 		</div>	
     </div>
    </div>
-	<div class="panel panel-default">
+<!--	<div class="panel panel-default">
 			  <div class="panel-heading">
 				<h1 class="panel-title">Upload Land Ownership Certificate</h1>
 			  </div>
@@ -74,7 +74,7 @@
 				  </div>
 				</div>
 			  </div>
-			</div>
+			</div> -->
 			
 	<div class="panel panel-default">
       <div class="panel-heading">
